--- a/src/package.xml
+++ b/src/package.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
   <types>
+    <members>HH_ManageHHAccountPageObject</members>
     <members>ShouldAccessBatchDataEntry</members>
     <members>ShouldCreateNewRecords</members>
     <members>ShouldDeleteExistingRecord</members>
@@ -9,5 +10,6 @@
     <members>TestUtil</members>
     <name>ApexClass</name>
   </types>
+  <fullName>CumulusTesting</fullName>
   <version>29.0</version>
 </Package>
